--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@react-three/drei": "9.75.0",
@@ -16,9 +18,7 @@
     "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "0.153.0",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "three": "0.153.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
