--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@react-three/drei": "9.75.0",
     "@react-three/fiber": "8.13.3",
+    "@reduxjs/toolkit": "^2.2.0",
     "@types/three": "0.152.1",
+    "audiobuffer-to-wav": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "three": "0.153.0"
   },
   "devDependencies": {
